# RS-Simple_BE

./: .env  .env.example  Cargo.toml  diesel.toml
migrations/2025-03-13-172649_create_initial_schema/: down.sql  up.sql
src/: lib.rs  main.rs
src/controllers/auth/: forgot_password.rs  login.rs  register.rs
src/db/: mod.rs
src/db/models/: users.rs
src/db/repository/: users.rs
src/db/schema/: schema.rs
src/dto/: mod.rs
src/middlewares/: errors.rs
