[package]
name = "dms-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
diesel = { version = "2.1", features = ["postgres", "r2d2"] } # Use "sqlite" if you prefer SQLite
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.7.1"
